prevents user menu from getting hidden by search

--- a/app/assets/stylesheets/application/base.css.less
+++ b/app/assets/stylesheets/application/base.css.less
@@ -27,7 +27,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 0 0.2em 0.04em black;
   width: 100%;
 
@@ -119,6 +119,7 @@ table {
   height: auto !important;
   height: 100%;
   margin: 0 auto -@footerHeight;
+  z-index: 1;
 
   > .content.container {
     padding-top: 70px;
